# invest-analytics-model

./: .gitignore  README.md  dbt_project.yml  profiles.yml  pyproject.toml
models/invest_analytics_dev/: mart-portfolio-ratio.sql  mart-portfolio-value.sql  schema.yml  warehouse-date.sql  warehouse-num-hold.sql  warehouse-portfolio.sql  warehouse-stock.sql
