[tool.poetry]
name = "poetry"
version = "0.1.0"
description = ""
authors = ["koyaaarr <koyaaarr@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
dbt-core = "^1.1.0"
dbt-bigquery = "^1.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
